# YAWN

./: .eslintignore  .eslintrc.json  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .prettierrc  2025-09-28-this-session-is-being-continued-from-a-previous-co.txt  CLAUDE.md  CLAUDE_ARCHIVE.md  CLAUDE_CONTEXT.md  CODE_REFERENCE.md  DEVELOPER_GUIDE.md  DOM_CHUNKING_PLAN.md  Dockerfile  IMPLEMENTATION_SUMMARY_SELECTOR_VALIDATION.md  INDEX.md  LLM_TODO.md  MULTI_USER_IMPLEMENTATION.md  Makefile  PROJECT_SPEC.md  PUBLISHING.md  README.md  SELECTOR_IMPROVEMENT_TODO.md  SETUP_GUIDE.md  TODO.md  USER_GUIDE.md  eslint.config.mjs  mypy.ini  package-lock.json  package.json  privacy_policy.md  pyproject.toml  requirements-frozen.txt  requirements.txt  test-url-matching.html
.claude/: settings.local.json
backend/: .dockerignore  AUTHENTICATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  alembic.prod.ini  requirements.txt  seed_llm_providers.py  test.db
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  auth_helpers.py  config.py  database.py  logging_config.py  main.py  middleware.py  models.py  schemas.py
backend/app/llm/: __init__.py  (+3 more)
backend/env/: .env.example  env.dev  env.prod
backend/tests/: __init__.py  conftest.py  test_auth.py  test_critical_selector_validation.py  test_dom_chunking.py  test_middleware.py  test_models.py  test_multi_tenancy.py  test_parallel_processing.py  test_selector_validator.py  test_sharing.py  test_users_router.py
chrome-extension/: DEAD_CODE_ANALYSIS.md  INLINE_STYLES_DEMO.md  README.md  SERVER_INTEGRATION.md  ai-generation.js  auth-manager.js  background.js  base-utils.js  color-dropdown.js  color-utils.js  content.js  contentDialog.js  contextGeneratorDialog.js  error-handling.js  manifest.json  markdown-utils.js  note-interaction-editing.js  note-positioning.js  note-state.js  permission-manager.js  popup.html  popup.js  selector-utils.js  server-api.js  shared-utils.js  sharing-interface.js  sharing.js  test-color-functionality.html  test-inline-styles.html  test-server-integration.js  test-text-selection.html
chrome-extension/tests/: test-color-functionality.html  test-inline-styles.html  test-server-integration.js
docs/: CHROME_STORE_REFACTOR_PLAN.md  DEPLOYMENT.md  GOOGLE_OAUTH_SETUP.md  MULTI_USER_IMPLEMENTATION.md  PLAN.md  PUBLISHING.md  auto-notes-data-flow.md
requirements/: README.md  base.txt  dev.txt  lock.txt  production.txt
scripts/: check_missing_deps.py  dev.sh  package-extension.sh  validate_requirements.py
tests/: __init__.py  conftest.py  test_context_builder.py  test_cost_tracker.py  test_gemini_provider.py  test_main.py
(+52 files in other folders)
