[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-notes"
version = "0.1.0"
description = "Chrome extension backend API for web notes with DOM anchoring"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gordon Palumbo", email = "gordon.palumbo+claude@gmail.com"}
]
maintainers = [
    {name = "Gogo (Claude Code)", email = "gordon.palumbo+claude@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6"
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
    "pre-commit==3.6.0",
    "pip-tools==7.3.0"
]

[project.urls]
Homepage = "https://github.com/gpalumbo/web-notes"
Repository = "https://github.com/gpalumbo/web-notes"
Issues = "https://github.com/gpalumbo/web-notes/issues"

[project.scripts]
web-notes-dev = "backend.bin.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", ".venv*", "chrome-extension*"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.tox
  | \.mypy_cache
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["backend"]
skip = [".venv"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "^.venv/",
    "^tests/"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=backend --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]